--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
 
-        <!-- <div class="loading-screen">
+        <div class="loading-screen">
             <h1>
                 <span class="let1">l</span>  
                 <span class="let2">o</span>  
@@ -26,7 +26,7 @@
                 <span class="let9">.</span>  
                 <span class="let10">.</span>  
             </h1>
-        </div> -->
+        </div>
         <div class="start-div">
             <div class="text">
                 <h1>Welcome</h1>
