--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <div class="tutorial hide">
                     <p>To move!</p>
                     <br>
-                    <img src="./img/WASD.png" alt="">
+                    <img src="img/WASD.png" alt="">
                 </div>
 
                 <div class="overlay-element-c hide">
                     <div class="flex-box">
-                        <img src="/img/profil.jpg" alt="Profil">
+                        <img src="img/profil.jpg" alt="Profil">
                         <div class="text-center">
                             <h1>Hello !</h1>
 
