--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                     <hr>
                     <ul>
                         <li>2023 - now | Sapientia Hungarian University of Transylvania</li>
-                        <li>Intelligent control systems (BSc)</li>
+                        <li>Intelligent control systems (MSc)</li>
                         <br>
                         <li>2019 - 2023 | Sapientia Hungarian University of Transylvania</li>
-                        <li>Computer Science (MSc)</li>
+                        <li>Computer Science (BSc)</li>
                         <br>
                         <li>2015 - 2019 | Petru Maior High School (Reghin)</li>
                         <li>Informatics</li>
