--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h1>Educations</h1>
                     <hr>
                     <ul>
-                        <li>2023 - now | Sapientia Hungarian University of Transylvania</li>
+                        <li>2023 - Present | Sapientia Hungarian University of Transylvania</li>
                         <li>Intelligent control systems (MSc)</li>
                         <br>
                         <li>2019 - 2023 | Sapientia Hungarian University of Transylvania</li>
@@ -117,7 +117,7 @@
                         </li>
                         <br>
                         <li>
-                            2022 - now | <a target="_blank" href="https://prismasolutions.ro/#/home">Prisma
+                            2022 - Present | <a target="_blank" href="https://prismasolutions.ro/#/home">Prisma
                                 Solutions</a>
                         </li>
                         <br>
