--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         hesitant to explore and implement interesting frontend structures and I'm also open to exploring
                         other cool areas like AI, Data Science, or even hardware development.
                         <br>
-                        <br> I see myself as a hard worker who's always hungry to learn. If something's not crystal
+                        <br> I see myself as a hard worker who's always hungry to learn. If something is not crystal
                         clear to me, I won't rest until I've nailed it down 100%. That drive keeps me pushing to improve
                         myself every single day.
                         <br>
@@ -93,6 +93,10 @@
                             2021 - 2021 | <a target="_blank" href="https://www.u-hub.ro/mentorprogram/">U-Hub mentoring
                                 program</a>
                         </li>
+                        <li>
+                         JavaSpring Boot Backend Development / Agile
+                        </li>
+                       
                     </ul>
                     <br>
                 </div>
@@ -126,10 +130,9 @@
                             Being part of a small team with big ambitions put me in a unique position to thrive under
                             pressure.
                             This environment enabled me to gain extensive knowledge in several areas, including best
-                            practices in Frontend Development with Angular
-                            , backend development using Spring Boot, Cloud integration through AWS, Postman, Testing,
-                            and much more. The list goes on,
-                            reflecting the diverse and rich learning experiences I've had with the team.
+                            practices in Frontend Development with Angular, 
+                            backend development using Spring Boot, Cloud integration through AWS, Postman, Testing,
+                            and much more.
                         </li>
                         <br>
                         <li>
@@ -168,7 +171,7 @@
                     <li>
                    
                         Takeaway: Developed a reliable backend focused on creating a dynamic search module capable of utilizing multiple filter specifications 
-                        and sorting companies by relevance, all while achieving a response time of under 6 seconds on AWS.
+                        and sorting companies by relevance, all while achieving a response time of under 5 seconds on AWS.
                     </li>
                    <br>
                     <li>
@@ -253,7 +256,7 @@
                     <h1>Hobbies</h1>
                     <hr>
                     <p>
-                        My hobbies are everything about sport,like sworking out, kickboxing
+                        My hobbies are everything about sport, like working out, kickboxing
                          to get fit and healthy, but i also like to challenge others in a good game of chess. 
                          <br>
                          <br>
