--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <br>
                 </div>
                 <div class="overlay-element-c hide text-justify">
-                    <h1>Work Experience</h1>
+                    <h1>Work Experiences</h1>
                     <hr>
                     <ul>
                         <li>
@@ -187,7 +187,7 @@
                     </li>
                     <br>
                     <li>
-                        <h1 class="text-center">Projects</h1>
+                        <h1 class="text-center">Own Projects</h1>
                         <hr>
                     </li>
                     <li>
